style.css
@font-face {
    font-family: "groove";
    src: url(fonts/Bold\ Groove.woff),
         url(fonts/Bold\ Groove.woff2);
    
}


*{
    margin: 0;
}

body{
    background-color: #C71111;
    position: relative;
}

#navigation{
    background-color: #1B1919;
    width: 100%;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#navigation nav{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 20px;
}

.nav-links{
    display: flex;
    align-items: center;
}

.nav-links ul{
    display: flex;
    list-style: none;
    text-decoration: none;
    gap: 13px;
    background-color: #C71111;
    width: 250px;
    height: 35px;
    display: flex;
    align-items: center;
    text-align: center;
    border-radius: 15px;
    justify-content: center;
    padding: 8px 30px;
}

.nav-links ul li{
    text-decoration: none;
    text-align: center;
}

.nav-links ul li a{
    text-decoration: none;
    color: white;
    font-size: 28px;
    font-family: 'BoldGroove', sans-serif;
}

#home{
    display: flex;
}

.home-content{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-top: 130px;
}

.home-img{
    width: 100%;
    overflow: hidden;
    margin-top: -350px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.home-img img{
    width: 890px;
    height: 977px;
    transition: width 0.6s ease, height 0.6s ease, margin-top 0.6s ease;
}

.home-img img:hover{
    width: 990px;
    height: 1077px;
    margin-top: -90px;
}

.home-text h1{
    text-align: center;
    color: white;
    font-size: 100px;
    font-family: "groove";
    font-weight: 200;
}

.home-text-bottom{
    color: white;
    text-align: center;
    margin-top: -190px;
    font-size: 33px;
    font-family: "groove";
    font-weight: 200;
}

.home-button{
    align-items: center;
    text-align: center;
}

.button-frame{
    background-color: #1B1919;
    width: 300px;
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: white;
    padding: 4px 10px;
    border-radius: 10px;
}

.button-frame span{
    font-family: "groove";
    font-weight: 200;
    font-size: 26px;
}

